--- a/mumerch_backend/package.json
+++ b/mumerch_backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fs-extra": "^11.1.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
