--- a/mumerch_backend/package.json
+++ b/mumerch_backend/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "fs-extra": "^11.1.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
@@ -37,7 +39,9 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.1",
     "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
