--- a/mumerch_backend/package.json
+++ b/mumerch_backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
@@ -30,6 +31,7 @@
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
     "fs-extra": "^11.1.1",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
