--- a/mumerch_backend/package.json
+++ b/mumerch_backend/package.json
@@ -30,7 +30,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
+    "file": "^0.2.2",
     "fs-extra": "^11.1.1",
+    "modification": "^1.0.0",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
