--- a/mumerch_backend/package.json
+++ b/mumerch_backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "better-html-pdf": "^0.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
