--- a/mumerch_frontend/package.json
+++ b/mumerch_frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "flowbite": "^1.8.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +18,9 @@
   "devDependencies": {
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
