--- a/mumerch_frontend/package.json
+++ b/mumerch_frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "flowbite": "^1.8.1",
     "next": "13.4.12",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
